// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditForm Should renders correctly 1`] = `
<DocumentFragment>
  <div
    class="modal_backdrop"
  >
    <div
      class="modal_window"
    >
      <div
        class="close_btn"
      >
        ×
      </div>
      <h1
        class="title"
      >
        editModal.title
      </h1>
      <form
        class="form"
      >
        <label
          class="label"
        >
          editModal.input.id
          <input
            autocomplete="off"
            class="input"
            data-testid="id"
            disabled=""
            name="id"
            type="number"
            value="1"
          />
        </label>
        <label
          class="label"
        >
          editModal.input.title
          <input
            autocomplete="off"
            class="input"
            data-testid="title"
            name="title"
            placeholder="editModal.placeholders.title"
            type="text"
            value="test title"
          />
        </label>
        <br />
        <label
          class="label"
        >
          editModal.input.date
          <input
            autocomplete="off"
            class="input"
            data-testid="release_date"
            name="release_date"
            type="date"
            value="12/12/2020"
          />
        </label>
        <br />
        <label
          class="label"
        >
          editModal.input.poster
          <input
            autocomplete="off"
            class="input"
            data-testid="poster_path"
            name="poster_path"
            placeholder="editModal.placeholders.poster"
            type="text"
            value="test path"
          />
        </label>
        <br />
        <span>
          addModal.input.genre
        </span>
        <div
          class="container"
        >
          <div
            class="select"
          >
            <p
              class="value"
            >
              addModal.genres.comedy
            </p>
            <div
              class="arrow"
            >
              ▼
            </div>
          </div>
          <div
            class="dropdown"
            data-testid="dropdown"
          >
            <div
              class="input"
            >
              <input
                class="checkbox"
                id="action"
                name="genres"
                type="checkbox"
                value="action"
              />
              <label
                class="lable"
                for="action"
              >
                <span>
                  addModal.genres.action
                </span>
              </label>
            </div>
            <div
              class="input"
            >
              <input
                class="checkbox"
                id="adventure"
                name="genres"
                type="checkbox"
                value="adventure"
              />
              <label
                class="lable"
                for="adventure"
              >
                <span>
                  addModal.genres.adventure
                </span>
              </label>
            </div>
            <div
              class="input"
            >
              <input
                class="checkbox"
                id="animation"
                name="genres"
                type="checkbox"
                value="animation"
              />
              <label
                class="lable"
                for="animation"
              >
                <span>
                  addModal.genres.animation
                </span>
              </label>
            </div>
            <div
              class="input"
            >
              <input
                checked=""
                class="checkbox"
                id="comedy"
                name="genres"
                type="checkbox"
                value="comedy"
              />
              <label
                class="lable"
                for="comedy"
              >
                <span>
                  addModal.genres.comedy
                </span>
              </label>
            </div>
            <div
              class="input"
            >
              <input
                class="checkbox"
                id="crime"
                name="genres"
                type="checkbox"
                value="crime"
              />
              <label
                class="lable"
                for="crime"
              >
                <span>
                  addModal.genres.crime
                </span>
              </label>
            </div>
            <div
              class="input"
            >
              <input
                class="checkbox"
                id="documentary"
                name="genres"
                type="checkbox"
                value="documentary"
              />
              <label
                class="lable"
                for="documentary"
              >
                <span>
                  addModal.genres.documentary
                </span>
              </label>
            </div>
            <div
              class="input"
            >
              <input
                class="checkbox"
                id="drama"
                name="genres"
                type="checkbox"
                value="drama"
              />
              <label
                class="lable"
                for="drama"
              >
                <span>
                  addModal.genres.drama
                </span>
              </label>
            </div>
            <div
              class="input"
            >
              <input
                class="checkbox"
                id="family"
                name="genres"
                type="checkbox"
                value="family"
              />
              <label
                class="lable"
                for="family"
              >
                <span>
                  addModal.genres.family
                </span>
              </label>
            </div>
            <div
              class="input"
            >
              <input
                class="checkbox"
                id="fantasy"
                name="genres"
                type="checkbox"
                value="fantasy"
              />
              <label
                class="lable"
                for="fantasy"
              >
                <span>
                  addModal.genres.fantasy
                </span>
              </label>
            </div>
            <div
              class="input"
            >
              <input
                class="checkbox"
                id="history"
                name="genres"
                type="checkbox"
                value="history"
              />
              <label
                class="lable"
                for="history"
              >
                <span>
                  addModal.genres.history
                </span>
              </label>
            </div>
            <div
              class="input"
            >
              <input
                class="checkbox"
                id="horror"
                name="genres"
                type="checkbox"
                value="horror"
              />
              <label
                class="lable"
                for="horror"
              >
                <span>
                  addModal.genres.horror
                </span>
              </label>
            </div>
            <div
              class="input"
            >
              <input
                class="checkbox"
                id="music"
                name="genres"
                type="checkbox"
                value="music"
              />
              <label
                class="lable"
                for="music"
              >
                <span>
                  addModal.genres.music
                </span>
              </label>
            </div>
            <div
              class="input"
            >
              <input
                class="checkbox"
                id="mystery"
                name="genres"
                type="checkbox"
                value="mystery"
              />
              <label
                class="lable"
                for="mystery"
              >
                <span>
                  addModal.genres.mystery
                </span>
              </label>
            </div>
            <div
              class="input"
            >
              <input
                class="checkbox"
                id="romance"
                name="genres"
                type="checkbox"
                value="romance"
              />
              <label
                class="lable"
                for="romance"
              >
                <span>
                  addModal.genres.romance
                </span>
              </label>
            </div>
            <div
              class="input"
            >
              <input
                class="checkbox"
                id="science fiction"
                name="genres"
                type="checkbox"
                value="science fiction"
              />
              <label
                class="lable"
                for="science fiction"
              >
                <span>
                  addModal.genres.science fiction
                </span>
              </label>
            </div>
            <div
              class="input"
            >
              <input
                class="checkbox"
                id="thriller"
                name="genres"
                type="checkbox"
                value="thriller"
              />
              <label
                class="lable"
                for="thriller"
              >
                <span>
                  addModal.genres.thriller
                </span>
              </label>
            </div>
            <div
              class="input"
            >
              <input
                class="checkbox"
                id="war"
                name="genres"
                type="checkbox"
                value="war"
              />
              <label
                class="lable"
                for="war"
              >
                <span>
                  addModal.genres.war
                </span>
              </label>
            </div>
            <div
              class="input"
            >
              <input
                class="checkbox"
                id="western"
                name="genres"
                type="checkbox"
                value="western"
              />
              <label
                class="lable"
                for="western"
              >
                <span>
                  addModal.genres.western
                </span>
              </label>
            </div>
          </div>
        </div>
        <br />
        <label
          class="label"
        >
          editModal.input.overview
          <input
            autocomplete="off"
            class="input"
            data-testid="overview"
            name="overview"
            placeholder="editModal.placeholders.overview"
            type="text"
            value="test overview"
          />
        </label>
        <br />
        <label
          class="label"
        >
          editModal.input.runtime
          <input
            autocomplete="off"
            class="input"
            data-testid="runtime"
            name="runtime"
            placeholder="editModal.placeholders.runtime"
            type="number"
            value="100"
          />
        </label>
      </form>
      <div
        class="btns"
      >
        <button
          class="reset"
          type="button"
        >
          editModal.reset
        </button>
        <button
          class="confirm"
          type="submit"
        >
          editModal.submit
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`EditForm Should renders correctly without runtime value 1`] = `
<DocumentFragment>
  <div
    class="modal_backdrop"
  >
    <div
      class="modal_window"
    >
      <div
        class="close_btn"
      >
        ×
      </div>
      <h1
        class="title"
      >
        editModal.title
      </h1>
      <form
        class="form"
      >
        <label
          class="label"
        >
          editModal.input.id
          <input
            autocomplete="off"
            class="input"
            data-testid="id"
            disabled=""
            name="id"
            type="number"
            value="1"
          />
        </label>
        <label
          class="label"
        >
          editModal.input.title
          <input
            autocomplete="off"
            class="input"
            data-testid="title"
            name="title"
            placeholder="editModal.placeholders.title"
            type="text"
            value="test title"
          />
        </label>
        <br />
        <label
          class="label"
        >
          editModal.input.date
          <input
            autocomplete="off"
            class="input"
            data-testid="release_date"
            name="release_date"
            type="date"
            value="12/12/2020"
          />
        </label>
        <br />
        <label
          class="label"
        >
          editModal.input.poster
          <input
            autocomplete="off"
            class="input"
            data-testid="poster_path"
            name="poster_path"
            placeholder="editModal.placeholders.poster"
            type="text"
            value="test path"
          />
        </label>
        <br />
        <span>
          addModal.input.genre
        </span>
        <div
          class="container"
        >
          <div
            class="select"
          >
            <p
              class="value"
            >
              addModal.genres.comedy
            </p>
            <div
              class="arrow"
            >
              ▼
            </div>
          </div>
          <div
            class="dropdown"
            data-testid="dropdown"
          >
            <div
              class="input"
            >
              <input
                class="checkbox"
                id="action"
                name="genres"
                type="checkbox"
                value="action"
              />
              <label
                class="lable"
                for="action"
              >
                <span>
                  addModal.genres.action
                </span>
              </label>
            </div>
            <div
              class="input"
            >
              <input
                class="checkbox"
                id="adventure"
                name="genres"
                type="checkbox"
                value="adventure"
              />
              <label
                class="lable"
                for="adventure"
              >
                <span>
                  addModal.genres.adventure
                </span>
              </label>
            </div>
            <div
              class="input"
            >
              <input
                class="checkbox"
                id="animation"
                name="genres"
                type="checkbox"
                value="animation"
              />
              <label
                class="lable"
                for="animation"
              >
                <span>
                  addModal.genres.animation
                </span>
              </label>
            </div>
            <div
              class="input"
            >
              <input
                checked=""
                class="checkbox"
                id="comedy"
                name="genres"
                type="checkbox"
                value="comedy"
              />
              <label
                class="lable"
                for="comedy"
              >
                <span>
                  addModal.genres.comedy
                </span>
              </label>
            </div>
            <div
              class="input"
            >
              <input
                class="checkbox"
                id="crime"
                name="genres"
                type="checkbox"
                value="crime"
              />
              <label
                class="lable"
                for="crime"
              >
                <span>
                  addModal.genres.crime
                </span>
              </label>
            </div>
            <div
              class="input"
            >
              <input
                class="checkbox"
                id="documentary"
                name="genres"
                type="checkbox"
                value="documentary"
              />
              <label
                class="lable"
                for="documentary"
              >
                <span>
                  addModal.genres.documentary
                </span>
              </label>
            </div>
            <div
              class="input"
            >
              <input
                class="checkbox"
                id="drama"
                name="genres"
                type="checkbox"
                value="drama"
              />
              <label
                class="lable"
                for="drama"
              >
                <span>
                  addModal.genres.drama
                </span>
              </label>
            </div>
            <div
              class="input"
            >
              <input
                class="checkbox"
                id="family"
                name="genres"
                type="checkbox"
                value="family"
              />
              <label
                class="lable"
                for="family"
              >
                <span>
                  addModal.genres.family
                </span>
              </label>
            </div>
            <div
              class="input"
            >
              <input
                class="checkbox"
                id="fantasy"
                name="genres"
                type="checkbox"
                value="fantasy"
              />
              <label
                class="lable"
                for="fantasy"
              >
                <span>
                  addModal.genres.fantasy
                </span>
              </label>
            </div>
            <div
              class="input"
            >
              <input
                class="checkbox"
                id="history"
                name="genres"
                type="checkbox"
                value="history"
              />
              <label
                class="lable"
                for="history"
              >
                <span>
                  addModal.genres.history
                </span>
              </label>
            </div>
            <div
              class="input"
            >
              <input
                class="checkbox"
                id="horror"
                name="genres"
                type="checkbox"
                value="horror"
              />
              <label
                class="lable"
                for="horror"
              >
                <span>
                  addModal.genres.horror
                </span>
              </label>
            </div>
            <div
              class="input"
            >
              <input
                class="checkbox"
                id="music"
                name="genres"
                type="checkbox"
                value="music"
              />
              <label
                class="lable"
                for="music"
              >
                <span>
                  addModal.genres.music
                </span>
              </label>
            </div>
            <div
              class="input"
            >
              <input
                class="checkbox"
                id="mystery"
                name="genres"
                type="checkbox"
                value="mystery"
              />
              <label
                class="lable"
                for="mystery"
              >
                <span>
                  addModal.genres.mystery
                </span>
              </label>
            </div>
            <div
              class="input"
            >
              <input
                class="checkbox"
                id="romance"
                name="genres"
                type="checkbox"
                value="romance"
              />
              <label
                class="lable"
                for="romance"
              >
                <span>
                  addModal.genres.romance
                </span>
              </label>
            </div>
            <div
              class="input"
            >
              <input
                class="checkbox"
                id="science fiction"
                name="genres"
                type="checkbox"
                value="science fiction"
              />
              <label
                class="lable"
                for="science fiction"
              >
                <span>
                  addModal.genres.science fiction
                </span>
              </label>
            </div>
            <div
              class="input"
            >
              <input
                class="checkbox"
                id="thriller"
                name="genres"
                type="checkbox"
                value="thriller"
              />
              <label
                class="lable"
                for="thriller"
              >
                <span>
                  addModal.genres.thriller
                </span>
              </label>
            </div>
            <div
              class="input"
            >
              <input
                class="checkbox"
                id="war"
                name="genres"
                type="checkbox"
                value="war"
              />
              <label
                class="lable"
                for="war"
              >
                <span>
                  addModal.genres.war
                </span>
              </label>
            </div>
            <div
              class="input"
            >
              <input
                class="checkbox"
                id="western"
                name="genres"
                type="checkbox"
                value="western"
              />
              <label
                class="lable"
                for="western"
              >
                <span>
                  addModal.genres.western
                </span>
              </label>
            </div>
          </div>
        </div>
        <br />
        <label
          class="label"
        >
          editModal.input.overview
          <input
            autocomplete="off"
            class="input"
            data-testid="overview"
            name="overview"
            placeholder="editModal.placeholders.overview"
            type="text"
            value="test overview"
          />
        </label>
        <br />
        <label
          class="label"
        >
          editModal.input.runtime
          <input
            autocomplete="off"
            class="input"
            data-testid="runtime"
            name="runtime"
            placeholder="editModal.placeholders.runtime"
            type="number"
            value="120"
          />
        </label>
      </form>
      <div
        class="btns"
      >
        <button
          class="reset"
          type="button"
        >
          editModal.reset
        </button>
        <button
          class="confirm"
          type="submit"
        >
          editModal.submit
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
